--- a/bundled/weather.infinitymodule/package.json
+++ b/bundled/weather.infinitymodule/package.json
@@ -2,10 +2,12 @@
   "name": "Current Weather",
   "description": "Displays the current temperature and weather for a given location",
   "author": "FIPLAB Ltd",
-  "website": "https://infinitydashboard.com/",
+  "contributors": [
+    "GEMA-SOFT AP"
+  ],
   "category": "weather",
   "bundleID": "com.fiplab.weather",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "minimumRefreshInterval": 600,
 
   "user_options": [
@@ -15,14 +17,43 @@
       "type": "string",
       "tooltip": "Your openweathermap.org API Key",
       "default": "",
-      "required": true,
+      "required": true
+    },
+    {
+      "title": "Location Format",
+      "name": "locationFormat",
+      "type": "string",
+      "options": [
+        {
+          "title": "City, Country Code",
+          "name": "cityName",
+          "type": "string"
+        },
+        {
+          "title": "Zip Code, Country Code",
+          "name": "zipCode",
+          "type": "string"
+        },
+        {
+          "title": "Coordinates (latitude, longitude)",
+          "name": "coordinates",
+          "type": "number"
+        },
+        {
+          "title": "City by ID",
+          "name": "cityID",
+          "type": "number"
+        }
+      ],
+      "default": "cityName",
+      "required": true
     },
     {
       "title": "Location",
-      "name": "cityName",
+      "name": "loc",
       "type": "string",
-      "tooltip": "City, State, Country Code\nExample: San Diego, CA, US\nExample: London,UK",
-      "required": true,
+      "tooltip": "City, Country Code (Atlanta, US)\nZip Code, Country Code (30096, US)\nLatitude, Longitude (33.99, -84.14)\nCity by ID (2172797)",
+      "required": true
     },
 
     {
@@ -32,18 +63,18 @@
       "options": [
         {"title": "Temperature", "name":"temperature"},
         {"title": "Weather Condition", "name":"weather"},
-        {"title": "Temperature - Weather Condition", "name":"both"},
+        {"title": "Temperature - Weather Condition", "name":"both"}
       ],
 
       "default": "temperature",
-      "required": true,
+      "required": true
     },
     {
       "title": "Show condition as an icon",
       "name": "useIcon",
       "type": "boolean",
       "tooltip": "Use the icon",
-      "required": true,
+      "required": true
     },
     {
       "title": "Display Units",
@@ -51,11 +82,11 @@
       "type": "string",
       "options": [
         {"title": "Imperial", "name":"imperial"},
-        {"title": "Metric", "name":"metric"},
+        {"title": "Metric", "name":"metric"}
       ],
 
       "default": "metric",
-      "required": true,
-    },
-  ]  
+      "required": true
+    }
+    ]  
 }
